# reflex-template

./: .gitignore  README.md  _ghcid.sh  default.nix  reflex-template.cabal  start_frontend.sh
src/: Main.hs
