cabal-version:       2.4

name:                reflex-template
version:             0.1.0.0
author:              Dmitry Olshansky
maintainer:          dima@typeable.io
build-type:          Simple

executable orders
  main-is:             Main.hs
  hs-source-dirs:      src

  default-language:   Haskell2010
  ghc-options:        -Wall -Wno-unrecognised-pragmas

  if impl(ghcjs)
    ghc-options:      -dedupe

  -- other-modules:

  build-depends:      base >=4.7
                    -- , aeson
                    -- , containers
                    -- , either
                    -- , generic-lens
                    -- , ghcjs-dom
                    -- , http-api-data
                    , jsaddle
                    , lens
                    -- , obelisk-route
                    -- , reflection
                    , reflex-dom
                    -- , servant
                    -- , servant-reflex
                    -- , split
                    -- , template-haskell
                    -- , tagged
                    , text
                    -- , time
                    -- , unordered-containers
                    -- , validationt
                    -- , witherable

  default-extensions: AllowAmbiguousTypes
                    , BangPatterns
                    , BlockArguments
                    , ConstraintKinds
                    , DataKinds
                    , DeriveGeneric
                    , DuplicateRecordFields
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , NamedFieldPuns
                    , OverloadedLabels
                    , OverloadedStrings
                    , PolyKinds
                    , QuasiQuotes
                    , RankNTypes
                    , RecordWildCards
                    , RecursiveDo
                    , ScopedTypeVariables
                    , TemplateHaskell
                    , TupleSections
                    , TypeApplications
                    , TypeFamilies
                    , TypeOperators
                    , UndecidableInstances
                    , ViewPatterns
